# herald

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: client.rs  config.rs  error.rs  lib.rs  main.rs
src/network/: configurator.rs  mod.rs
src/socket_manager/: mod.rs
src/v4/: handler.rs  message.rs  mod.rs  tests.rs
tests/: integration_tests.rs
