[package]
name = "herald"
version = "0.1.0"
edition = "2021"
authors = ["Herald Contributors"]
description = "A robust DHCPv4 client implementation in Rust"
repository = "https://github.com/your-org/herald"
license = "MIT OR Apache-2.0"
keywords = ["dhcp", "networking", "client", "ipv4"]
categories = ["network-programming", "command-line-utilities"]
readme = "README.md"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.39", features = ["derive"] }
dhcproto = "0.13.0"
libc = "0.2.172"
rand = "0.9.1"
socket2 = "0.5.10"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true